--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@fontsource-variable/nunito": "^5.0.19",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.1.10"
   },
   "devDependencies": {
     "eslint": "^8",
